overflow error resolved

--- a/Practical-3/todo-react-app/src/App.css
+++ b/Practical-3/todo-react-app/src/App.css
@@ -11,5 +11,5 @@
   background-color: #f4f4f4;
   box-shadow: 5px 5px 15px -3px rgba(0, 0, 0, 0.5);
   padding: 30px 40px;
-  min-width: 250px;
+  width: 250px;
 }
