--- a/Practical-3/todo-react-app/src/Components/AddTodo/AddTodo.css
+++ b/Practical-3/todo-react-app/src/Components/AddTodo/AddTodo.css
@@ -1,8 +1,7 @@
 .task-container {
   height: 360px;
   margin-top: 15px;
-  overflow: scroll;
-  scrollbar-width: none;
+  overflow: auto;
   color: rgba(0, 0, 0, 0.604);
   font-size: 15px;
 }
@@ -27,7 +26,7 @@
 }
 .add-todo-button:hover {
   color: rgba(0, 0, 0, 0.720);
-  border: 1px solid;
+  border: 1px solid rgb(89, 145, 101);
 }
 .add-todo-button:active {
   transform: scale(0.9);
